package proxy;

public class Song {
}
